- The DataConverter_NullZeroString class added. This is for numeric field that the blank is treated as NULL.
- TinyMCE Ver.4.0.19 supported.
- "new Function()" statements have gone away. Moreover no eval function so far.
- The length function which returns the length of string added to the expression.
- The new area named "Practices" in the "Samples" directory is added.
- [BUG FIX] In case of a validation didn't meet, all calculation fields updated.
- [BUG FIX] Parser recognized some operators as a part of variables.
- [BUG FIX] The sum function couldn't aggregate formatted values.
- [BUG FIX] Formatter classes didn't work in the updating task in PDO.
- [BUG FIX] JSON supported communication branch wasn't merged.
- [BUG FIX] Debug messages weren't shown in the browser's window.

Ver.4.2 (2014/3/13)
- Calculation Field started to work. See the 'Sample_invoice'.
- Send emails after the load/edit/new database operations.
- Installation procedure is changed. We recommend to clone the repository and use the 'buildup.sh' script.
- INTERMediatorOnPage.processingAfterPostOnlyContext has TWO parameters.
- DataConverter_HTMLString supports double and single quote to convert to reference character.
- DataConverter_HTMLString supports disabling HTML escaping (by specifying 'parameter' => 'noescape' ).
- When the 'transaction' set to 'none', the update processing improved and update once for single record.
- New sample "Asset Management Sample" is added.
- Update sample_schema_mysql.txt/sample_schema_sqlite.txt/sample_schema_pgsql.txt for Asset Management Sample.
- Update TestDB.fmp12/TestDB.fp7/sample_schema_filemaker.php for Asset Management Sample.
- Update TestDB.fp7 for using sample_schema_filemaker.php.
- [BUG FIX] Fix setIdValue() of INTER-Mediator.js to enable setting the value of the field to the attribute of
  the node again when specifying the IM target and displaying multiple records.